--- a/index.html
+++ b/index.html
@@ -5,9 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/logos/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/logos/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/logos/favicon-16x16.png">
+    <link rel="manifest" href="img/site.webmanifest">
+    <link rel="shortcut icon" href="img/logos/favicon.ico" type="image/x-icon">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+
+        <div class="logo-lateral">
+            <a href="#"><img src="img/logos/logo_branca.png" alt=""></a>
+        </div>
+        <div class="cadastro-btn">
+            <button><a href="#">Login</a></button>
+        </div>
+        <div class="icon">
+            <a href="#"><img src="" alt="">face</a>
+        </div>
+        <div class="image-wrapper">
+            <img src="img/tree.jpg" alt="Árvore no meio do lago">
+        </div>
+        <div class="banner">
+            <h1>Break Time</h1>
+            <p>Cyber cafeteria</p>
+            <button><a href="">Saiba mais</a></button>
+        </div>
+        </header>
+    </div>
 </body>
 </html>
