:package: menu sidebar

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container show-menu">
         <header>
-
+            <div class="burguer">
+                <div class="line" id="line1"></div>
+                <div class="line" id="line2"></div>
+                <div class="line" id="line3"></div>
+                <span>fechar</span>
+            </div>
         <div class="logo-lateral">
             <a href="#"><img src="img/logos/logo_branca.png" alt=""></a>
         </div>
-        <div class="cadastro-btn">
-            <button><a href="#">Login</a></button>
-        </div>
-        <div class="icon">
-            <a href="#"><img src="" alt="">face</a>
-        </div>
+        
         <div class="image-wrapper">
-            <img src="img/tree.jpg" alt="Árvore no meio do lago">
+            <img src="img/coffe-cup.jpg" alt="Árvore no meio do lago">
         </div>
         <div class="banner">
             <h1>Break Time</h1>
@@ -34,6 +34,25 @@
             <button><a href="">Saiba mais</a></button>
         </div>
         </header>
+
+        <div class="sidebar">
+            <nav>
+                <ul class="menu">
+                <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
+                <li class="menu-item"><a href="#" class="menu-link">Sobre Nós</a></li>
+                <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
+                <li class="menu-item"><a href="#" class="menu-link">Produtos</a></li>
+                <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
+                </ul>
+            </nav>
+            <div class="social-media">
+                <a href=""><i class="fab fa-facebook"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
     </div>
 </body>
+
+<script src="js/main.js"></script>
 </html>
