--- a/index.html
+++ b/index.html
@@ -25,9 +25,16 @@
             <a href="#"><img src="img/logos/logo_branca.png" alt=""></a>
         </div>
         
-        <div class="image-wrapper">
-            <img src="img/coffe-cup.jpg" alt="Árvore no meio do lago">
+        <div class = "carrossel">
+            <div class = "container-carrossel" id="picture">
+                <img class="pic" src="img/coffe-cup.jpg" alt="paisagem">
+                <img class="pic" src="img/banner.jpg" alt="paisagem">
+                <img class="pic" src="img/atendimento-img.jpg" alt="paisagem">
+                <img class="pic" src="img/img1.jpg" alt="paisagem">
+                
+            </div>
         </div>
+
         <div class="banner">
             <h1>Break Time</h1>
             <p>Cyber cafeteria</p>
@@ -47,8 +54,8 @@
                 </ul>
 
                 <div class="cadastro-button">
-                    <div class="login"><a href="#">Cadastre-se</a></div>
-                    <div class="login"><a href="#">Login</a></div>
+                    <div class="login"><a href="/treino/index.html" target="_blank">Cadastre-se</a></div>
+                    <div class="login"><a href="/treino/login.html"  target="_blank">Login</a></div>
                 </div>
             </nav>
 
@@ -111,6 +118,6 @@
         </section>
     </div>
 </body>
-
+<script src="js/sidebar.js"></script>
 <script src="js/main.js"></script>
 </html>
