:package: banco de dados att

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 </ul>
 
                 <div class="cadastro-button">
-                    <div class="login"><a href="/treino/index.html" target="_blank">Cadastre-se</a></div>
-                    <div class="login"><a href="/treino/login.html"  target="_blank">Login</a></div>
+                    <div class="login"><a href="http://localhost/version1/treino/cadastro.html" target="_blank">Cadastre-se</a></div>
+                    <div class="login"><a href="http://localhost/version1/treino/login.html"  target="_blank">Login</a></div>
                 </div>
             </nav>
 
