:package: :up: pages php

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/body-sobre.css">
+    <link rel="stylesheet" href="css/body-produtos.css">
+    <link rel="stylesheet" href="css/mediaquery.css">
+    <link rel="stylesheet" href="css/header.css">
     <link rel="apple-touch-icon" sizes="180x180" href="img/logos/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/logos/logo_sem_fundo.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/logos/favicon-16x16.png">
@@ -35,6 +38,8 @@
             </div>
         </div>
 
+        <img src="/info-cadastro-login/img/undraw_hello_re_3evm.svg" alt="">
+
         <div class="banner">
             <h1>Break Time</h1>
             <p>Cyber cafeteria</p>
@@ -54,12 +59,11 @@
                 </ul>
 
                 <div class="cadastro-button">
-                    <div class="login"><a href="http://localhost/version1/treino/cadastro.html" target="_blank">Cadastre-se</a></div>
-                    <div class="login"><a href="http://localhost/version1/treino/login.html"  target="_blank">Login</a></div>
+                    <div class="login"><a href="http://localhost/version1/cadastro.php">Cadastre-se</a></div>
+                    <div class="login"><a href="http://localhost/version1/login.php">Login</a></div>
                 </div>
             </nav>
 
-           
             <div class="social-media">
                 <a href=""><i class="fab fa-facebook"></i></a>
                 <a href=""><i class="fab fa-instagram"></i></a>
@@ -116,6 +120,57 @@
                 </div>
             </div>
         </section>
+
+        <section class="">
+            <div class="container-slide">
+                <div class="slides">
+                    <div class="slide">
+                        <img src="" alt="" srcset="">
+                    </div>
+                    <div class="slide">
+                        <img src="" alt="" srcset="">
+                    </div>
+                    <div class="slide">
+                        <img src="" alt="" srcset="">
+                    </div>
+                    <div class="slide">
+                        <img src="" alt="" srcset="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="vantagens-break">
+
+        </section>
+
+        <section class="parcerias" id="empty">
+            <div class="container-parcerias">
+                <h1>PARCEIROS BREAK TIME</h1>
+                <div class="parceiro">
+                    <h2>Apolo Energy</h2>
+                    <div class="img-parceiro">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <div class="parceiro">
+                    <h2>Lightspeed</h2>
+                    <div class="img-parceiro">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="social-media-footer">
+                <ul>
+                    <li>facebook</li>
+                    <li>intagram</li>
+                    <li>linkedin</li>
+                </ul>
+            </div>
+        </footer>
     </div>
 </body>
 <script src="js/sidebar.js"></script>
