--- a/index.html
+++ b/index.html
@@ -141,7 +141,40 @@
         </section>
 
         <section class="vantagens-break">
-
+            <div class="vantagens-c">
+                <div class="vantagem">
+                    <ul>
+                        <li></li>
+                    </ul>
+                    <div class="img-vantagem">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <div class="vantagem">
+                    <ul>
+                        <li></li>
+                    </ul>
+                    <div class="img-vantagem">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <div class="vantagem">
+                    <ul>
+                        <li></li>
+                    </ul>
+                    <div class="img-vantagem">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <div class="vantagem">
+                    <ul>
+                        <li></li>
+                    </ul>
+                    <div class="img-vantagem">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="parcerias" id="empty">
