:package: Pagina produtos

--- a/produtos.html
+++ b/produtos.html
@@ -8,8 +8,161 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>OIII</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates at, atque sed tempore optio voluptatibus, adipisci magnam provident, quae illum suscipit quos voluptate rerum deserunt quasi aspernatur officia non voluptatum.</p>
+    <section class="body-geral">
+        <div class="bebidas-geladas">
+            <div class="container-geladas">
+                <div class="geladas">
+                    <h3>Iced Coffe Tradicional</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span>R$15,00</span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="geladas">
+                    <h3>Iced Coffe Break Way</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span>R$15,00</span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="geladas">
+                    <h3>Frappé</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span>R$15,00</span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="geladas">
+                    <h3>Frozen</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span>R$15,00</span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="geladas">
+                    <h3>Cappucino gelado</h3>
+                    <p></p>
+                    <img src="" alt="">
+                    <span>R$15,00</span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="geladas">
+                    <h3>Freeze Time(Original Break Time)</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span>R$15,00</span>
+                    <a href="">Comprar</a>
+                </div>
+            </div>
+        </div>
 
+        <div class="bebidas-quentes">
+            <div class="container-quentes">
+                <div class="quentes">
+                    <h3>Espresso Tradicional</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span>R$15,00</span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="quentes">
+                    <h3>Espresso Break Way</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span>R$15,00</span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="quentes">
+                    <h3>Café Latte</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span>R$15,00</span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="quentes">
+                    <h3>Machiatto</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span>R$15,00</span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="quentes">
+                    <h3>Café Americano</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span>R$12,00</span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="quentes">
+                    <h3>Cappucino</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span>R$12,00</span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="quentes">
+                    <h3>Mocha</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span>R$12,00</span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="quentes">
+                    <h3>Hotter Break(Original Break Time)</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span>R$12,00</span>
+                    <a href="">Comprar</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="sobremesas">
+            <div class="container-sobremesas">
+                <div class="sobremesa">
+                    <h3></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span>R$15,00</span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="sobremesa">
+                    <h3></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span>R$15,00</span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="sobremesa">
+                    <h3></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span>R$15,00</span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="sobremesa">
+                    <h3></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span>R$15,00</span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="sobremesa">
+                    <h3></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span></span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="sobremesa">
+                    <h3></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <img src="" alt="">
+                    <span>R$15,00</span>
+                    <a href="">Comprar</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
