--- a/produtos.html
+++ b/produtos.html
@@ -4,161 +4,209 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/info-produtos.css">
+    <link rel="stylesheet" href="css/info-produtos.css">
     <title>Document</title>
 </head>
 <body>
     <section class="body-geral">
-        <div class="bebidas-geladas">
+        <div class="bebidas-geladas" id="bebidas-geladas">
+            <h1>Bebidas Geladas</h1>
             <div class="container-geladas">
                 <div class="geladas">
-                    <h3>Iced Coffe Tradicional</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="content">
+                        <h3>Iced Coffe Tradicional</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="img-div"><img src="img/foto-coffe.jpg" alt=""></div>
                     <span>R$15,00</span>
                     <a href="">Comprar</a>
                 </div>
                 <div class="geladas">
-                    <h3>Iced Coffe Break Way</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="content">
+                        <h3>Iced Coffe Break Way</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="img-div"><img src="img/foto-coffe.jpg" alt=""></div>
                     <span>R$15,00</span>
                     <a href="">Comprar</a>
                 </div>
                 <div class="geladas">
-                    <h3>Frappé</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="content">
+                        <h3>Frappé</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="img-div"><img src="img/foto-coffe.jpg" alt=""></div>
                     <span>R$15,00</span>
                     <a href="">Comprar</a>
                 </div>
                 <div class="geladas">
-                    <h3>Frozen</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="content">
+                        <h3>Frozen</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="img-div"><img src="img/foto-coffe.jpg" alt=""></div>
                     <span>R$15,00</span>
                     <a href="">Comprar</a>
                 </div>
                 <div class="geladas">
-                    <h3>Cappucino gelado</h3>
-                    <p></p>
-                    <img src="" alt="">
+                    <div class="content">
+                        <h3>Cappucino gelado</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="img-div"><img src="img/foto-coffe.jpg" alt=""></div>
                     <span>R$15,00</span>
                     <a href="">Comprar</a>
                 </div>
                 <div class="geladas">
-                    <h3>Freeze Time(Original Break Time)</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="content">
+                        <h3>Freeze Time<sup>(Original Break Time)</sup></h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="img-div">
+                        <img src="img/foto-coffe.jpg" alt=""></div>
                     <span>R$15,00</span>
                     <a href="">Comprar</a>
                 </div>
             </div>
         </div>
 
-        <div class="bebidas-quentes">
+        <div class="bebidas-quentes" id="bebidas-quentes">
+            <h1>Bebidas Quentes</h1>
             <div class="container-quentes">
                 <div class="quentes">
-                    <h3>Espresso Tradicional</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="content">
+                        <h3>Espresso Tradicional</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="img-div">
+                        <img src="img/foto-coffe.jpg" alt=""></div>
                     <span>R$15,00</span>
                     <a href="">Comprar</a>
                 </div>
                 <div class="quentes">
-                    <h3>Espresso Break Way</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="content">
+                        <h3>Espresso Break Way</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="img-div"><img src="img/foto-coffe.jpg" alt=""></div>
                     <span>R$15,00</span>
                     <a href="">Comprar</a>
                 </div>
                 <div class="quentes">
-                    <h3>Café Latte</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="content">
+                        <h3>Café Latte</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="img-div"><img src="img/foto-coffe.jpg" alt=""></div>
                     <span>R$15,00</span>
                     <a href="">Comprar</a>
                 </div>
                 <div class="quentes">
-                    <h3>Machiatto</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="content">
+                        <h3>Machiatto</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="img-div"><img src="img/foto-coffe.jpg" alt=""></div>
                     <span>R$15,00</span>
                     <a href="">Comprar</a>
                 </div>
                 <div class="quentes">
-                    <h3>Café Americano</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="content">
+                        <h3>Café Americano</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="img-div"><img src="img/foto-coffe.jpg" alt=""></div>
                     <span>R$12,00</span>
                     <a href="">Comprar</a>
                 </div>
                 <div class="quentes">
-                    <h3>Cappucino</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="content">
+                        <h3>Cappucino</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="img-div"><img src="img/foto-coffe.jpg" alt=""></div>
                     <span>R$12,00</span>
                     <a href="">Comprar</a>
                 </div>
                 <div class="quentes">
-                    <h3>Mocha</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="content">
+                        <h3>Mocha</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="img-div"><img src="img/foto-coffe.jpg" alt=""></div>
                     <span>R$12,00</span>
                     <a href="">Comprar</a>
                 </div>
                 <div class="quentes">
-                    <h3>Hotter Break(Original Break Time)</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="content">
+                        <h3>Hotter Break<sup>(Original Break Time)</sup></h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="img-div"><img src="img/foto-coffe.jpg" alt=""></div>
                     <span>R$12,00</span>
                     <a href="">Comprar</a>
                 </div>
             </div>
         </div>
 
-        <div class="sobremesas">
-            <div class="container-sobremesas">
+        <div class="sobremesas" id="sobremesa">
+            <h1>Sobremesas</h1>
+            <div class="container-sobremesas" >
                 <div class="sobremesa">
-                    <h3></h3>
+                    <h3>Torta de chocolate</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="img-div"><img src="" alt=""></div>
                     <span>R$15,00</span>
                     <a href="">Comprar</a>
                 </div>
                 <div class="sobremesa">
-                    <h3></h3>
+                    <h3>Banoffe</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="img-div"><img src="" alt=""></div>
                     <span>R$15,00</span>
                     <a href="">Comprar</a>
                 </div>
                 <div class="sobremesa">
-                    <h3></h3>
+                    <h3>Bolo Red Velvet</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="img-div"><img src="" alt=""></div>
                     <span>R$15,00</span>
                     <a href="">Comprar</a>
                 </div>
                 <div class="sobremesa">
-                    <h3></h3>
+                    <h3>Three Time (Original Break Time)</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="img-div"><img src="" alt=""></div>
                     <span>R$15,00</span>
                     <a href="">Comprar</a>
                 </div>
                 <div class="sobremesa">
-                    <h3></h3>
+                    <h3>Tiramisu</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="img-div"><img src="" alt=""></div>
                     <span></span>
                     <a href="">Comprar</a>
                 </div>
                 <div class="sobremesa">
-                    <h3></h3>
+                    <h3>Cheesecake</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <img src="" alt="">
+                    <div class="img-div"><img src="" alt=""></div>
                     <span>R$15,00</span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="sobremesa">
+                    <h3>Rolo de Canela</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <div class="img-div"><img src="" alt=""></div>
+                    <span>R$15,00</span>
+                    <a href="">Comprar</a>
+                </div>
+                <div class="sobremesa">
+                    <h3>Donuts</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <div class="img-div"><img src="" alt=""></div>
+                    <span>R$15,00</span>
+                    <p>Sabores: Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora</p>
                     <a href="">Comprar</a>
                 </div>
             </div>
