--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     <p>Rio de Janeiro RJ, Campo Grande, Estrada de algum lugar, nº 01</p>
                 </div>
                 <div class="local-foto">
-                    <img src="img/atendimento-img.jpg" alt="" srcset="">
+                    <img src="img/local.jpg" alt="" srcset="">
                 </div>
             </div>
 
@@ -368,7 +368,7 @@
                     <img src="img/integrantes/raquel.jpg" alt="" srcset="">
                 </div>
                 <div class="info-integrante">
-                    <h2>Raquel Salles</h2>
+                    <h2>Raquel Sales</h2>
                     <p>CFO - Diretora Financeira</p>
                 </div>
             </div>
@@ -424,7 +424,7 @@
 
 
         <div class="footer">
-            
+
             <div class="container-footer">
                 <div class="social-media-footer">
                     <ul>
