--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 </ul>
 
                 <div class="cadastro-button">
-                    <div class="login"><a href="http://localhost/version1/cadastro.php">Cadastre-se</a></div>
-                    <div class="login"><a href="http://localhost/version1/login.php">Login</a></div>
+                    <div class="login"><a href="cadastro.php">Cadastre-se</a></div>
+                    <div class="login"><a href="login.php">Login</a></div>
                 </div>
             </nav>
 
