--- a/produtos.html
+++ b/produtos.html
@@ -475,13 +475,13 @@
                     <div class="footer-item">
                       <h2 class="footer-title">Endereço</h2>
                       <div class="footer-items">
-                        <h3>Rio de Janeiro RJ, Campo Grande, Estrada de algum lugar, nº 01</h3>
+                        <h3>Estrada do Mendanha 2367- Campo Grande, Rio de Janeiro – RJ.</h3>
             
                       </div>
                     </div>
                    </div>
                   <div class="container-end-footer">
-                    <div class="copyright"><p>copyright © 2022 - Present • <b>Break Time </b></div>
+                    <div class="copyright"><p>Todos os direitos reservados © 2022 - <b>Break Time</b></div>
             
                   </div>
         </div>
