:up: ultimas atts

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     </section>
 
     <section class="time-break">
-    <h1>Time Break Time</h1>
+    <h1>Equipe Break Time</h1>
 
         <div class="container-break">
 
